load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])  # keep

go_library(
    name = "hcvault",
    srcs = [
        "hcvault_aead.go",
        "hcvault_client.go",
    ],
    importpath = "github.com/tink-crypto/tink-go-hcvault/v2/integration/hcvault",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_hashicorp_vault_api//:api",
        "@com_github_tink_crypto_tink_go_v2//core/registry",
        "@com_github_tink_crypto_tink_go_v2//tink",
    ],
)

go_test(
    name = "hcvault_test",
    srcs = [
        "hcvault_aead_internal_test.go",
        "hcvault_aead_test.go",
        "hcvault_client_test.go",
    ],
    data = ["//integration/hcvault/testdata:server_tls_files"],
    embed = [":hcvault"],
    deps = ["@com_github_tink_crypto_tink_go_v2//aead"],
)

alias(
    name = "go_default_library",
    actual = ":hcvault",
    visibility = ["//:__subpackages__"],
)
